# quinnjr.tech

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  .gitmodules  .pnpmfile.cjs  Dockerfile  Dockerfile-devel  LICENSE  README.md  angular.json  cypress.json  dev.sh  develop.docker-compose.yml  docker-compose.yml  docker-entry.sh  jest.config.json  jest.server-config.json  package-lock.json  package.json  pnpm-lock.yaml  schema.gql  server.ts  tsconfig.e2e.json  tsconfig.json  webpack.config.ts
frontend/: .gitignore  Cargo.toml  Dockerfile  Dockerfile-devel  angular.json  jest.config.json  ngsw-config.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.ts
frontend/etc/nginx/templates/: default.conf.template
frontend/src/: index.html  lib.rs  styles.scss
frontend/src/app/: admin-load.guard.spec.ts  admin-load.guard.ts  admin.guard.ts  app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
frontend/src/app/admin/: admin-routing.module.ts  admin.component.html  admin.component.ts  admin.module.ts
frontend/src/app/articles/: articles-routing.module.ts
frontend/src/app/flash-message/: flash-message.component.spec.ts  flash-message.component.ts  flash-message.service.spec.ts
frontend/src/app/home/: home.component.spec.ts  home.component.ts
frontend/src/app/loading-bar/: loading-bar.component.html  loading-bar.component.ts
frontend/src/app/login/: login.component.html  login.component.spec.ts
frontend/src/app/markdown/: markdown.module.ts  markdown.pipe.ts  markdown.service.spec.ts  (+6 more)
(+1028 files in other folders)
